[package]
name = "jwt-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
rsa = { version = "0.9.2", features = ["sha2"] }
rand = "0.8.5"
jwt-compact = { version = "0.7.0", features = ["rsa"] }
chrono = "0.4.29"
